log
Thu 07 Sep 2023 05:00:21 PM UTC: 
 hashmap.c | 24 ++++++++++++++++++++++++
 1 file changed, 24 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘insertMap’:
hashmap.c:49:23: error: expected ‘;’ before ‘}’ token
   49 |     map->current = pos
      |                       ^
      |                       ;
   50 |   }
      |   ~                    
hashmap.c:58:30: error: expected ‘;’ before ‘map’
   58 |         map->buckets[i] = par
      |                              ^
      |                              ;
   59 |         map->current = j;
      |         ~~~                   
Compilation failed
78d110c
Thu 07 Sep 2023 05:07:06 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|6
total_score: 10/70
c0b1931
Thu 07 Sep 2023 05:10:03 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|6
total_score: 10/70
5900429
Thu 07 Sep 2023 05:32:57 PM UTC: 
 hashmap.c | 13 +++++++++++++
 1 file changed, 13 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:79:17: error: invalid initializer
   79 |   HashMap map = malloc(sizeof(HashMap));
      |                 ^~~~~~
hashmap.c:80:10: error: invalid operands to binary == (have ‘HashMap’ {aka ‘struct HashMap’} and ‘void *’)
   80 |   if(map == NULL) exit(EXIT_FAILURE);
      |          ^~
hashmap.c:82:6: error: invalid type argument of ‘->’ (have ‘HashMap’ {aka ‘struct HashMap’})
   82 |   map->buckets = malloc(sizeof(Pair ) * capacity);
      |      ^~
hashmap.c:86:8: error: invalid type argument of ‘->’ (have ‘HashMap’ {aka ‘struct HashMap’})
   86 |     map->buckets[i] = NULL
      |        ^~
hashmap.c:87:3: error: expected ‘;’ before ‘}’ token
   87 |   }
      |   ^
hashmap.c:89:6: error: invalid type argument of ‘->’ (have ‘HashMap’ {aka ‘struct HashMap’})
   89 |   map->size = 0;
      |      ^~
hashmap.c:90:6: error: invalid type argument of ‘->’ (have ‘HashMap’ {aka ‘struct HashMap’})
   90 |   map->current = 1;
      |      ^~
hashmap.c:91:6: error: invalid type argument of ‘->’ (have ‘HashMap’ {aka ‘struct HashMap’})
   91 |   map->capacity = capacity;
      |      ^~
Compilation failed
be918a5
Thu 07 Sep 2023 05:35:50 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘createMap’:
hashmap.c:79:17: error: invalid initializer
   79 |   HashMap map = malloc(sizeof(HashMap));
      |                 ^~~~~~
hashmap.c:80:10: error: invalid operands to binary == (have ‘HashMap’ {aka ‘struct HashMap’} and ‘void *’)
   80 |   if(map == NULL) exit(EXIT_FAILURE);
      |          ^~
hashmap.c:82:6: error: invalid type argument of ‘->’ (have ‘HashMap’ {aka ‘struct HashMap’})
   82 |   map->buckets = malloc(sizeof(Pair ) * capacity);
      |      ^~
hashmap.c:86:8: error: invalid type argument of ‘->’ (have ‘HashMap’ {aka ‘struct HashMap’})
   86 |     map->buckets[i] = NULL;
      |        ^~
hashmap.c:89:6: error: invalid type argument of ‘->’ (have ‘HashMap’ {aka ‘struct HashMap’})
   89 |   map->size = 0;
      |      ^~
hashmap.c:90:6: error: invalid type argument of ‘->’ (have ‘HashMap’ {aka ‘struct HashMap’})
   90 |   map->current = 1;
      |      ^~
hashmap.c:91:6: error: invalid type argument of ‘->’ (have ‘HashMap’ {aka ‘struct HashMap’})
   91 |   map->capacity = capacity;
      |      ^~
Compilation failed
a196677
Thu 07 Sep 2023 05:36:17 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|6
total_score: 10/70
c578acb
Thu 07 Sep 2023 05:36:33 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|6
total_score: 10/70
28102d4
Thu 07 Sep 2023 05:37:09 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|6
total_score: 10/70
fecb772
Thu 07 Sep 2023 05:38:20 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|5
total_score: 20/70
320df5a
Thu 07 Sep 2023 07:03:59 PM UTC: 
 hashmap.c | 22 ++++++++++++++++++++++
 1 file changed, 22 insertions(+)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:104:3: error: expected ‘,’ or ‘;’ before ‘if’
  104 |   if(map->buckets[pos] == NULL) return NULL;
      |   ^~
hashmap.c:117:7: error: expected ‘,’ or ‘;’ before ‘if’
  117 |       if(map->buckets[j] == NULL) return NULL;
      |       ^~
hashmap.c:121:25: error: expected ‘;’ before ‘return’
  121 |         map->current = j
      |                         ^
      |                         ;
  122 |         return map->buckets[j];
      |         ~~~~~~           
Compilation failed
bdef992
Thu 07 Sep 2023 07:04:36 PM UTC: 
 hashmap.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
 tests:  5|5
total_score: 20/70
cf967c2
Thu 07 Sep 2023 07:10:22 PM UTC: 
 hashmap.c | 21 +++++++++++++++++++++
 1 file changed, 21 insertions(+)
test.c: In function ‘eraseMap’:
test.c:453:5: error: ‘main’ is normally a non-static function [-Werror=main]
  453 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:511:1: error: expected declaration or statement at end of input
  511 | }
      | ^
At top level:
test.c:453:5: error: ‘main’ defined but not used [-Werror=unused-function]
  453 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:217:5: error: ‘insert_test5’ defined but not used [-Werror=unused-function]
  217 | int insert_test5(){ //factor de carga>0.7, se llama a función enlarge
      |     ^~~~~~~~~~~~
test.c:131:6: error: ‘compare_test’ defined but not used [-Werror=unused-function]
  131 | void compare_test(){
      |      ^~~~~~~~~~~~
test.c:125:6: error: ‘hash_test3’ defined but not used [-Werror=unused-function]
  125 | void hash_test3(){ //no random
      |      ^~~~~~~~~~
test.c:111:6: error: ‘hash_test2’ defined but not used [-Werror=unused-function]
  111 | void hash_test2(){ // colisiones
      |      ^~~~~~~~~~
test.c:100:6: error: ‘hash_test1’ defined but not used [-Werror=unused-function]
  100 | void hash_test1(){ // posición válida
      |      ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
be831e4
Thu 07 Sep 2023 07:12:21 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  8|4
total_score: 30/70
37b9d07
Thu 07 Sep 2023 07:13:00 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:146:12: error: returning ‘HashMap *’ {aka ‘struct HashMap *’} from a function with incompatible return type ‘Pair *’ [-Werror=incompatible-pointer-types]
  146 |     return map;
      |            ^~~
cc1: all warnings being treated as errors
Compilation failed
ffb8396
Thu 07 Sep 2023 07:13:19 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|4
total_score: 30/70
cdf6f6a
Thu 07 Sep 2023 07:16:58 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:146:5: error: ‘return’ with no value, in function returning non-void [-Werror=return-type]
  146 |     return ;
      |     ^~~~~~
hashmap.c:122:8: note: declared here
  122 | Pair * searchMap(HashMap * map,  char * key) {
      |        ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
69d62c3
Thu 07 Sep 2023 07:17:25 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  8|4
total_score: 30/70
33b6c0c
Thu 07 Sep 2023 07:17:41 PM UTC: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘searchMap’:
hashmap.c:147:1: error: control reaches end of non-void function [-Werror=return-type]
  147 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
efbd2ba
Thu 07 Sep 2023 07:18:12 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  8|4
total_score: 30/70
9ebad9a
Thu 07 Sep 2023 07:19:45 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  7|4
total_score: 30/70
94e3866
Thu 07 Sep 2023 07:21:33 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  10|3
total_score: 40/70
98a2619
